# DDR_Knowledge_Graphs

./: DDRs extraction & cleaning.ipynb  README.md  spaCy approach.ipynb
CEC/cec/: README.md  gitignore  pyproject.toml
CEC/cec/Ingestion/: France_to_Raw.py  README.md
CEC/cec/Ingestion/Bird_Detection/: Ingest_Bird_Detection_Time_Series.py
CEC/cec/Ingestion/EDP/: ingest_edp.py
CEC/cec/Ingestion/Monterey_Bay/: Acoustic Data Ingestion.py  README.md
CEC/cec/PreKickoff/: README.md  ingest_kaggle_turkey_data.py
CEC/cec/PreKickoff/apply_computer_vision/: README.md  yolo_video.py
CEC/cec/PreKickoff/ingest_kaggle_unknown_turbine/: README.md  contextualize_pnid_ex1.py  create_assets_unknown_turbine.py  frontfill_events_unknown_turbine.py  frontfill_timeseries_unknown_turbine.py  ingest_dtu_image_files.py  ingest_events_unknown_turbine.py  ingest_timeseries_unknown_turbine.py  livefeed_events_unknown_turbine.py  livefeed_performance_timeseries_unknown_turbine.py  livefeed_sitelevel_weather_timeseries.py  livefeed_timeseries_unknown_turbine.py  preprocess_timeseries_unknown_turbine.py
CEC/cec/PreKickoff/process_french_turbines/: README.md  anomaly_detection_template.py  (+5 more)
CEC/cec/cdf_examples/: README.md  sequences_example.py  timeseries_example.py
CEC/cec/cognite_apps/: README.md
CEC/cec/git/: config  index  packed-refs
CEC/cec/live_feed_french_turbine_timeseries/: function_config.yaml  handler.py
CEC/cec/live_feed_performance_timeseries_french_turbine/: handler.py
CEC/cec/livefeed_sitelevel_weather_timeseries/: function_config.yaml  handler.py
(+13 files in other folders)
